             metas can now be turned off for a 'cleaner' file.
        - New wavedrawing mode (set to default) with drawing only a tiny outline of the wave (rj)
        - DidYouKnow dialog now allows multiline help texts (rj)
        - Several of the colors written to the config were not properly read back, now fixed (rj)
20.01.2016:
        - Fixed mixer crash when deleting track in updateStripList. (Tim)
        - Fixed audio rack plugin problems: From README.effects-rack:
            "For mono tracks with plugins having more than one audio input or output,
              MusE uses the first input or output and ignores the rest."
          This was not happening. It was using the second output. Fixed.
          Optimization: When changing track channels: Previously we deleted all rack plugin 
           instances and rebuilt them. Now it only deletes or rebuilds what is necessary.
          Fixed: A good side effect of the above is that rack plugin GUIs no longer 
           disappear when changing track channels :-)
          Fixed: Multiple-instance plugin GUIs were being updated from the last instance's
           control values. Now they are updated from the first instance (ie. 'left').
        - Arranger fixes: Fixed problems with channel unwanted double increments. 
          Fixed problems with popup editors, click/doubleclick passing to parent,
           for example channel editor box causing 'track lock' column icon to light.
      *Arranger Feature - Multiple selected tracks common property editing:
        - You can now edit a property and it will change all the selected tracks.
          Currently works for track channel column and midi output port.
          
18.01.2016:
        - Strips are raised when dragged in mixer (they should also get a solid background)
        - When sorting mixer as arranger moving strips in mixer affects arranger also (rj)
16.01.2016:
        - Added ability to rearrange mixer A and/or sync it to the arranger look